Add reliability analysis. Fixes some UIs.

--- a/salam/salam-rest/src/main/resources/webui/views/assignment-status.html
+++ b/salam/salam-rest/src/main/resources/webui/views/assignment-status.html
@@ -31,10 +31,10 @@
         <label for="name" class="col-sm-2 control-label">Service Assigned</label>
         <div class="col-sm-10"><p class="form-control-static"><span class="label label-info">{{assignment.service}}</span></p></div>
 
-        <label for="name" class="col-sm-2 control-label">Peer Name</label>
+        <label for="name" class="col-sm-2 control-label">Unit Name</label>
         <div class="col-sm-10"><p class="form-control-static">{{assignment.peer.name}}</p></div>
         
-        <label for="name" class="col-sm-2 control-label">Peer Email</label>
+        <label for="name" class="col-sm-2 control-label">Unit Email</label>
         <div class="col-sm-10"><p class="form-control-static">{{assignment.peer.email}}</p></div>
 
         <label ng-hide="assignment.status=='ASSIGNED'" for="name" class="col-sm-2 control-label">Running Time</label>
