--- a/salam/salam-rest/src/main/resources/webui/views/create-peer.html
+++ b/salam/salam-rest/src/main/resources/webui/views/create-peer.html
@@ -1,4 +1,4 @@
-<h2>Create Peer</h2>
+<h2>Create Unit</h2>
 
 <form class="form-horizontal" role="form" ng-submit="createPeer()">
     <div class="form-group">
@@ -12,7 +12,7 @@
         </div>
         <label for="email" class="col-sm-2 control-label">REST URL</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="rest" placeholder="Enter REST URL for software peer" ng-model="peer.rest">
+            <input type="text" class="form-control" id="rest" placeholder="Enter REST URL for software unit" ng-model="peer.rest">
         </div>
         <label for="services_provided" class="col-sm-2 control-label">Services Provided</label>
         <div class="col-sm-10">
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Create Peer</button>
+            <button type="submit" class="btn btn-default">Create</button>
         </div>
     </div>
 </form>
