--- a/salam/salam-rest/src/main/resources/webui/views/list-peer.html
+++ b/salam/salam-rest/src/main/resources/webui/views/list-peer.html
@@ -1,5 +1,5 @@
-<h2>Peers <a class="btn btn-primary pull-right" href="#/peer/create"><i
-        class="icon-plus-sign icon-white"></i> Create Peer</a></h2>
+<h2>Units <a class="btn btn-primary pull-right" href="#/peer/create"><i
+        class="icon-plus-sign icon-white"></i> Create Unit</a></h2>
 
 <table class="table table-hover">
     <tr>
