--- a/hcu/hcu-rest/src/main/resources/webui/views/simulation/task-detail.html
+++ b/hcu/hcu-rest/src/main/resources/webui/views/simulation/task-detail.html
@@ -522,7 +522,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" ng-click="saveValue()" data-dismiss="modal">Save
+                    <button type="button" class="btn btn-primary" ng-click="saveValueForTask()" data-dismiss="modal">Save
                         changes
                     </button>
                 </div>
